console-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-admin
  labels:
    app: console-admin
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: console-admin
